Fix nav menu y-overflow

--- a/src/components/navbar/styles.module.scss
+++ b/src/components/navbar/styles.module.scss
@@ -19,6 +19,7 @@
 }
 
 .mobile_nav_menu {
+  overflow-y: hidden;
   position: absolute;
   top: 0;
   left: 0;
